--- a/MyAutoTests/build.gradle
+++ b/MyAutoTests/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = 'packages.test_project_1.MyFirstProgram'
 
 repositories {
     mavenCentral()
@@ -8,4 +6,5 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.6.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
 }
