Попытка написать Тест

--- a/test_project_1/build.gradle
+++ b/test_project_1/build.gradle
@@ -8,4 +8,6 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.6.0'
+    implementation 'org.apache:apache:26'
+    implementation 'org.apache.commons.io'
 }
